--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,16 @@ body {
     margin: 20px;
 }
 
-ol, ul {
-    padding-left: 30px;
-}
-
-.status {
-    margin-bottom: 10px;
-}
-
 .team {
-    background: #fff;
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+    background-image: url('http://infoshareacademy.com/images/main-bg.jpg');
+    background-size:cover;
+    background-repeat:no-repeat;
     border: 1px solid #999;
-    font-size: 24px;
+    font-size: 15px;
+    color: rgba(255, 255, 255, 0.68);
     font-weight: bold;
     margin-right: -1px;
     margin-top: -1px;
@@ -23,12 +21,41 @@ ol, ul {
     width: 100%;
     height: 50vh;
 }
-
-.square:focus {
-    outline: none;
+.team_info{
+    flex: 1 1 auto;
+}
+.answers {
 }
 
-.kbd-navigation .square:focus {
-    background: #ddd;
+.answer {
+    width:100%;
+    background: #af1e23;
+    background: radial-gradient(ellipse at center, #af1e23 0%,#910c0d 100%);
+    position: relative;
+    display: block;
+    text-align:center;
+    height:50px;
+    vertical-align:middle;
+    line-height: 45px;
+}
+
+.triangle-left {
+    width: 0;
+    height: 0;
+    border-top: 26px solid transparent;
+    border-bottom: 26px solid transparent;
+    border-right: 26px solid #fff;
+    position:relative;
+}
+.triangle-left:after{
+    content:'';
+    width: 0;
+    height: 0;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-right: 25px solid #9a1114;
+    position:absolute;
+    top:-21px;
+    left:1px;
 }
 
